datasource db {
  provider = "postgresql"
  url      = env("NEXT_DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Account {
  id                 String    @id @default(cuid())
  userId             String
  providerType       String
  providerId         String
  providerAccountId  String
  refreshToken       String?
  accessToken        String?
  accessTokenExpires DateTime?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt
  user               User      @relation(fields: [userId], references: [id])

  @@unique([providerId, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  userId       String
  expires      DateTime
  sessionToken String   @unique
  accessToken  String   @unique
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  user         User     @relation(fields: [userId], references: [id])
}

model VerificationRequest {
  id         String   @id @default(cuid())
  identifier String
  token      String   @unique
  expires    DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@unique([identifier, token])
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  accounts Account[]
  sessions Session[]
  Rfids    Rfids?
}

model Rfids {
  rfid_id    String   @id @default(cuid())
  codice     String
  stato      Boolean
  user       User?    @relation(fields: [user_id_fk], references: [id])
  user_id_fk String?  @unique
  createdAt  DateTime @default(now()) @map(name: "created_at")
  updatedAt  DateTime @updatedAt @map(name: "updated_at")

  @@map(name: "rfids")
}

model Durata {
  durata_id            String    @id @default(cuid())
  tempo                Float
  costo_finale         Float
  pagamento_effettuato Boolean
  parcheggi            Parcheggi @relation(fields: [parcheggi_id_fk], references: [parcheggi_id])
  parcheggi_id_fk      String
  createdAt            DateTime  @default(now()) @map(name: "created_at")
  updatedAt            DateTime  @updatedAt @map(name: "updated_at")

  @@map(name: "durata")
}

model Parcheggi {
  parcheggi_id     String   @id @default(cuid())
  piano            Int
  posto            Int
  parcheggio_stato Boolean
  createdAt        DateTime @default(now()) @map(name: "created_at")
  updatedAt        DateTime @updatedAt @map(name: "updated_at")
  Durata           Durata[]

  @@map(name: "parcheggi")
}
