//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  providerType String [not null]
  providerId String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (providerId, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  userId String [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
  accessToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table VerificationRequest {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts Account [not null]
  sessions Session [not null]
  Rfids rfids
}

Table rfids {
  rfid_id String [pk]
  codice String [not null]
  stato Boolean [not null]
  user User
  user_id_fk String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table durata {
  durata_id String [pk]
  tempo Float [not null]
  costo_finale Float [not null]
  pagamento_effettuato Boolean [not null]
  parcheggi parcheggi [not null]
  parcheggi_id_fk String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table parcheggi {
  parcheggi_id String [pk]
  piano Int [not null]
  posto Int [not null]
  parcheggio_stato Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Durata durata [not null]
}

Ref: Account.userId > User.id

Ref: Session.userId > User.id

Ref: rfids.user_id_fk - User.id

Ref: durata.parcheggi_id_fk > parcheggi.parcheggi_id